test/e2e/testdata/tcp-authorization-client-ip.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: gateway-conformance
  listeners:
  - name: tcp
    port: 8080
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-with-authorization-client-ip
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tcp-authorization-client-ip
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: TCPRoute
    name: tcp-with-authorization-client-ip
  authorization:
    defaultAction: Allow
    rules:
    - name: "deny-location-1"
      action: Deny
      principal:
        clientCIDRs:
        - 192.168.1.0/24
    - name: "allow-location-2"
      action: Allow
      principal:
        clientCIDRs:
        - 10.0.1.0/24
